--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
-numpy==1.21.3
 openai==0.19.0
 openpyxl==3.0.9
 pandas==1.3.4
@@ -25,4 +24,10 @@ urllib3==1.26.7
 Werkzeug==2.0.2
 moviepy==1.0.2
 pytube==12.1.0
+numpy
+torch
+tqdm
+more-itertools
+transformers>=4.19.0
+ffmpeg-python==0.2.0
 git+https://github.com/openai/whisper.git 
