adding download feature, how to run it? in README.md, modifying summ3ry/app.py so it would work locally for developer, editing .gitignore so it would ignore right directories after the repo was restructured for tests, finnaly enabling favicon.ico, appending requirements.txt with pytest and selenium, new flash messages the empty and not allowed file exception are handled now

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
 .idea/*
 __pycache__
-uploads/*.mp3
-/text/*.txt
-/.env
-/env
+summ3ry/uploads/*.mp3
+summ3ry/text/*.txt
+summ3ry/.env
+summ3ry/env
 servervenv
-downloads
+summ3ry/downloads
 /.vscode
