--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,13 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - '**'
+      # '!branch' <- to exlude your branch
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - '**'
+
 
 permissions:
   contents: read
