--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Start Flask Server
       run: |
-        cd summ3ry
-        nohup flask run > server.log &
+        nohup python setup.py > server.log &
         sleep 5
         cat server.log
     - name: Test with pytest
