update .env creation method
changed .env creation method from cat to echo "key" > file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        cat <<EOF > .env
-        OPENAI_API_KEY=${OPENAI_API_KEY}
-        EOF
+        echo "OPENAI_API_KEY=${OPENAI_API_KEY}" > .env
     - name: Test with pytest
       run: |
         pytest tests/tests.py
