--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        echo "OPENAI_API_KEY=${OPENAI_API_KEY}" > .env
+        echo "OPENAI_API_KEY=${{env.OPENAI_API_KEY}}" > .env
     - name: Test with pytest
       run: |
         pytest tests/tests.py
