--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         echo "OPENAI_API_KEY=$OPENAI_API_KEY" > .env
+    - name: Debug environment variables
+      run: |
+        echo "OPENAI_API_KEY=${OPENAI_API_KEY:0:4}****${OPENAI_API_KEY: -4}"
     - name: Test with pytest
       run: |
         pytest tests/tests.py
